--- a/_config.yml
+++ b/_config.yml
@@ -62,11 +62,11 @@ navs:
 
   -
     href: /wiki/
-    label: 维基
+    label: 维基百科
 
   -
     href: /links/
-    label: 链接
+    label: 链接aaa
 
   -
     href: /about/
