--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ compress_html:
 author: zhengying
 organization: 
 organization_url: 
-github_username: zengying
+github_username: zhengying
 location: Shanghai, China
 email: yingzheng9527@163.com
 
